<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_scroll_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background"
    android:fadingEdgeLength="20dp"
    android:fillViewport="true"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_background"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="18dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="1dp" >

                <ImageView
                    android:id="@+id/concurlogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/concur_new_logo"
                    android:contentDescription="@string/app_name"
                     />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="15dp"
                    android:background="@color/StandardBlueBackground" />

                <EditText
                    android:id="@+id/emailId"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/square_no_border"
                    android:hint="@string/email_lookup_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textAppearance="@style/PrimaryText" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="10dp"
                    android:background="@color/StandardBlueBackground" />
            </LinearLayout>

            <Button
                android:id="@+id/contdButton"
                style="@style/StandardBlueButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/email_lookup_continue" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="@color/StandardBlueBackground" />

        <TextView
            android:id="@+id/company_sso_login"
            style="@style/TransparantButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:gravity="center"
            android:padding="1dp"
            android:text="@string/sso_sign_in"
            android:textAppearance="@style/TourSmallSecondaryText"
            android:visibility="visible" />
    </LinearLayout>

</ScrollView>