<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/MaterialWhite">

    <View
        android:id="@+id/main_layout"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"/>

    <ScrollView
        android:id="@+id/main_scroll_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_layout"
        android:fadingEdgeLength="20dp"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="18dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="1dp">

                    <ImageView
                        android:id="@+id/concurlogo"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:padding="20dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/concur_logo_sign_in"
                        />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="20dp"
                        />

                    <TextView
                        android:id="@+id/emailIdLabel"
                        style="@style/TransparantButton_Material"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:fontFamily="sans-serif-light"
                        android:text=""/>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="5dp"
                        />

                    <EditText
                        android:id="@+id/emailId"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/email_lookup_hint"
                        android:inputType="textEmailAddress|textAutoComplete|textAutoCorrect|textNoSuggestions|textFilter|textVisiblePassword"
                        android:maxLines="1"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textColorHint="@color/MaterialHintLightGray"
                        android:textColor="@color/MaterialConcurBlue"
                        android:backgroundTint="@color/MaterialTintLightBlue"
                        android:gravity="center_horizontal"
                        android:fontFamily="sans-serif"
                        android:textSize="22dp"
                        />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="10dp"
                        />
                </LinearLayout>

                <Button
                    android:id="@+id/contdButton"
                    style="@style/StandardBlueButton_Material"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/email_lookup_continue"/>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                />

            <TextView
                android:id="@+id/login_forgot_password"
                style="@style/TransparantButton_Material"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:clickable="true"
                android:gravity="center"
                android:padding="1dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/login_help_with_signin_password"
                android:textColor="@color/MaterialConcurBlue"
                android:textSize="16sp"
                android:visibility="visible"/>

            <LinearLayout
                android:id="@+id/or_sso_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/or_lable"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/or"
                    android:textSize="16sp"
                    android:textAppearance="@style/TestRegSecondary_Material">
                </TextView>

                <TextView
                    android:id="@+id/company_sso_login"
                    style="@style/TransparantButton_Material"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="1dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/sso_sign_in"
                    android:textColor="@color/MaterialConcurBlue"
                    android:textSize="16sp"
                    android:visibility="visible"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>